test_translator/tests/data/checkpoint_2/core/pass/50_decimal_basic/tests.py
from decimal import Decimal

assert get_decimal() == Decimal("3.14")
assert decimal_from_int() == Decimal("100")
