test_translator/tests/data/checkpoint_2/core/fail/60_tol_flag_basic/tests.py
assert approx_pi() == 3.14159
